
Sat Aug 21 20:30:48 BST 1999  Adam D. Moss  <adam@gimp.org>

	* app/frac.[ch]: Eradicated.

	* app/xcf.c: In mourning.

1999-08-21  Tor Lillqvist  <tml@iki.fi>

	* app/errorconsole.c: Also provide a Clear button.

	* app/gimprc.c: Add a missing static function declaration.

	* app/makefile.{cygwin,msc}: Add new files.

	* libgimp/gimp.def: Add new entry points.

	* plug-ins/common/jpeg.c: Must include glib.h first. You don't
	want to know why.

	* plug-ins/common/psp.c: New file. This plug-in Loads Paint Shop
	Pro files (.psp and .tub). Doesn't yet save them. Handles only 24-
	bit images (with or without alpha) correctly so far.

	* plug-ins/makefile.{cygwin,msc}: Build psp. Somebody please add
	it to the auto* build system, too. I guess a test for zlib (which it
	needs) is needed in configure.in.

Sat Aug 21 16:53:17 BST 1999  Adam D. Moss  <adam@gimp.org>

	* plug-ins/common/jpeg.c:  Preview layers need to be alpha-padded,
	since they're not on the bottom of the stack.  That's a GIMP rule.

	Plus... use new API functions gimp_image_{freeze,thaw}_undo() to avoid
	the dilemma of either consuming a squillion superfluous tiles or
	clobbering the whole undo stack.

	* app/gimage.h
	* app/gimage_cmds.c
	* app/gimpimage.c
	* libgimp/gimp.h
	* libgimp/gimpimage.c: New API functions
	gimp_image_{freeze,thaw}_undo()	to avoid the above twin	evils.
	Similar to gimp_image_{disable,enable}_undo() but without
	clobbering the undo stack (I would have simply changed the latter,
	but too many plugins seem to rely on that behaviour).  See the PDB
	docs for slightly more information.
	
Sat Aug 21 8:47:00 CST 1999  Seth Burgess <sjburges@gimp.org>

	* plug-ins/common/jpeg.c : added a patch by Xach for slider
        being inactive when checkbox isn't marked.

Sat Aug 21 15:16:00 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/measure.c: corrected my last "fix"
	* app/paint_core.c: corrected an error in the modifier handling I 
	introduced earlier
